--- a/MiniProjects.html
+++ b/MiniProjects.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini Projects</title>
-    <script src="My%20promtional%20Website%202-2/miniProjects.js"></script>
-    <link rel="stylesheet" href="My%20promtional%20Website%202-2/mini.css">
+    <script src="miniProjects.js"></script>
+    <link rel="stylesheet" href="mini.css">
 </head>
 <body>
 
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="My%20promtional%20Website%202-2/Family.html">Family</a>
-    <a href="My%20promtional%20Website%202-2/Hobbies.html">Hobbies</a>
-    <a href="My%20promtional%20Website%202-2/Sports.html">Sports</a>
+    <a href="Family.html">Family</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
     <br><br>
 </div>
@@ -20,10 +20,10 @@
 <h1>Mini Projects</h1>
 <form name="weather">
     <img id="weather" src="" height="75">
-    <img src="My%20promtional%20Website%202-2/img/summer.jpg" height="189" width="285"/>
-    <img src="My%20promtional%20Website%202-2/img/spring.jpg" height="189" width="285"/>
-    <img src="My%20promtional%20Website%202-2/img/fall.jpg" height="189" width="285"/>
-    <img src="My%20promtional%20Website%202-2/img/winter.jpg" height="189" width="285"/>
+    <img src="img/summer.jpg" height="189" width="285"/>
+    <img src="img/spring.jpg" height="189" width="285"/>
+    <img src="img/fall.jpg" height="189" width="285"/>
+    <img src="img/winter.jpg" height="189" width="285"/>
     <!-- further organize content with regard to javascript by creating 'forms' on a HTML doc-->
     <form name="conditional">
     <h4>Results for conditional statements</h4>
