--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="My%20promtional%20Website%202-2/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>My Promotional Website</title>
 
 
@@ -15,10 +15,10 @@
 
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="My%20promtional%20Website%202-2/Family.html">Family</a>
-    <a href="My%20promtional%20Website%202-2/Hobbies.html">Hobbies</a>
-    <a href="My%20promtional%20Website%202-2/Sports.html">Sports</a>
-    <a href="My%20promtional%20Website%202-2/MiniProjects.html">Mini Projects</a>
+    <a href="Family.html">Family</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Sports.html">Sports</a>
+    <a href="MiniProjects.html">Mini Projects</a>
 
 </div>
 
