--- a/Family.html
+++ b/Family.html
@@ -13,8 +13,8 @@
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <a href="Family.html">Family</a>
-    <a href="My%20promtional%20Website%202-2/Hobbies.html">Hobbies</a>
-    <a href="My%20promtional%20Website%202-2/Sports.html">Sports</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
 
 </div>
@@ -58,18 +58,18 @@
         With my family we go on vacation a lot and we all enjoy it also.So here are some pictures that shows some places I went on  vacation somewhere.
         <br><br>
 
-        <img src="My%20promtional%20Website%202-2/img/vacation1.PNG" height="519" width="692"/>
+        <img src="img/vacation1.PNG" height="519" width="692"/>
         <br>
         <br>
         This is when we where on the ferry to Disney World
         <br>
         <br>
-        <img src="My%20promtional%20Website%202-2/img/vaction2.PNG" height="128" width="181"/>
+        <img src="img/vaction2.PNG" height="128" width="181"/>
         <br>
         <br>
         This picture shows us when we where going on a road trip to maybe california
         <br>
-        <img src="My%20promtional%20Website%202-2/img/vaction.PNG" height="120" width="178"/></p>
+        <img src="img/vaction.PNG" height="120" width="178"/></p>
     The last picture shows us when we reached Florida and we took a picture.
     <br>
     <br>
