--- a/MiniProjects.html
+++ b/MiniProjects.html
@@ -20,6 +20,7 @@
 <h1>Mini Projects</h1>
     <img id="weather" src="" height="75">
     <!-- further organize content with regard to javascript by creating 'forms' on a HTML doc-->
+    <form name="weather"
         <form name="conditional">
         <h4>Results for conditional statements</h4>
         <br>
@@ -29,6 +30,7 @@
         <br><br>
         Results: <input type="text" name="results" readonly="true" style="border-style: none;">
         <br><br><br>
+    </form>
     </form>
 <form name="grade">
     <h5>Grading Converter</h5>
