--- a/Javascript Binary/index.html
+++ b/Javascript Binary/index.html
@@ -6,6 +6,15 @@
     <script src="myScript.js"></script>
 </head>
 <body>
+    <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="Family.html">Family</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Sports.html">Sports</a>
+    <a href="MiniProjects.html">Mini Projects</a>
+    <a href="binary.html">Binary Converter</a>
+
+</div>
 <h2>Base 10 to base 2</h2>
 <form name="toBinary">
     Results: <input name="result" readonly="true">
