--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="Hobbies.html">Hobbies</a>
     <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
+    <a href="binary.html">Binary Converter</a>
 
 </div>
 
