--- a/Sports.html
+++ b/Sports.html
@@ -16,6 +16,7 @@
     <a href="Hobbies.html">Hobbies</a>
     <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
+    <a href="binary.html">Binary Converter</a>
 
 </div>
 
