--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,13 +9,13 @@
 <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <a href="Family.html">Family</a>
     <a href="Hobbies.html">Hobbies</a>
-    <a href="My%20promtional%20Website%202-2/Sports.html">Sports</a>
+    <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
+    <a href="binary.html">Binary Converter</a>
 
 </div>
 <h1>Hobbies</h1>
