--- a/Hobbies.html
+++ b/Hobbies.html
@@ -31,14 +31,14 @@
     <br>
     Here are some pictures to show my hobbies.
     <br>
-    <img src="My%20promtional%20Website%202-2/img/drawing.PNG" height="285" width="430"/></p>
+    <img src="img/drawing.PNG" height="285" width="430"/></p>
 I like to draw especially superheros.
 <br>
-<img src="My%20promtional%20Website%202-2/img/park.PNG" height="203" width="426"/></body>
+<img src="img/park.PNG" height="203" width="426"/></body>
 <br>
 This shows how I like to go to the park.
 <br>
-<img src="My%20promtional%20Website%202-2/img/sponge.PNG" height="203" width="298"/></html>
+<img src="img/sponge.PNG" height="203" width="298"/></html>
 <br>
 This shows my favorite TV show.
 <br>
