--- a/Sports.html
+++ b/Sports.html
@@ -34,19 +34,19 @@
     Out of all those sports my favorite sport is soccer. And in soccer my favorite player is <mark>Leonil Messi</mark>
     <br>
     <br>
-          <img src="My%20promtional%20Website%202-2/img/messi.PNG" height="170" width="302"/>
+          <img src="img/messi.PNG" height="170" width="302"/>
     <br>
     <br>
     I also like basket ball and football i'm not really a big fan of watching but I do like playing basket ball. My favorite basketball player is <strong>Lebron James</strong>. I like him because he is one of the little basket ball players I know also I am a bandwagon.
     <br>
     <br>
-    <img src="My%20promtional%20Website%202-2/img/lebron.PNG" height="189" width="285"/></p>
+    <img src="img/lebron.PNG" height="189" width="285"/></p>
 My favorite Football player is <em>Peyton Manning</em> he is my favorite Football player because I was a band wagon and he won the super bowl a while ago and I knew his name and he is my favorite now.
 <br>
 <br>
 
 
-<img src="My%20promtional%20Website%202-2/img/peyton.PNG" height="198" width="294"/>
+<img src="img/peyton.PNG" height="198" width="294"/>
 
 
 
