--- a/MiniProjects.html
+++ b/MiniProjects.html
@@ -14,7 +14,8 @@
     <a href="Hobbies.html">Hobbies</a>
     <a href="Sports.html">Sports</a>
     <a href="MiniProjects.html">Mini Projects</a>
-    <br><br>
+    <a href="binary.html">Binary Converter</a>
+
 </div>
 
 <h1>Mini Projects</h1>
