--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Base Converter</title>
     <script src="myScript.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <div class="topnav" id="myTopnav">
