--- a/binary.html
+++ b/binary.html
@@ -18,9 +18,9 @@
 </div>
 <h2>Base 10 to base 2</h2>
 <form name="toBinary">
-    Results: <input name="result" readonly="true">
+    Results: <input id="name1" name="result" readonly="true">
 
-    <button type="button" onclick="document.toBinary.result.value=tenToSmall()">to Base 2</button>
+    <button type="button" onclick="document.toBinary.result.name1.value=tenToSmall()">to Base 2</button>
 </form>
 
 <form name="binary">
