--- a/binary.html
+++ b/binary.html
@@ -18,14 +18,14 @@
 </div>
 <h2>Base 10 to base 2</h2>
 <form name="toBinary">
-    Results: <input id="name1" name="result" readonly="true">
+    Results: <input name="results" readonly="true">
 
-    <button type="button" onclick="document.toBinary.result.name1.value=tenToSmall()">to Base 2</button>
+    <button type="button" onclick="document.toBinary.results.value=tenToSmall()">to Base 2</button>
 </form>
 
 <form name="binary">
     <h2>Base 2 to base 10</h2>
-    results : <input name="results" readonly="true">
+    Results : <input name="results" readonly="true">
     <br><br>
     <button type="button" onclick="document.binary.results.value=smallToTen()">To base 10</button>
 
