--- a/MiniProjects.html
+++ b/MiniProjects.html
@@ -16,6 +16,7 @@
     <a href="MiniProjects.html">Mini Projects</a>
     <a href="calculator.html">Calculator</a>
     <a href="binary.html">Base Converter</a>
+    <a href="madib.html">Madlibs</a>
     <br><br>
 </div>
 
