--- a/binary.html
+++ b/binary.html
@@ -15,6 +15,7 @@
     <a href="MiniProjects.html">Mini Projects</a>
     <a href="calculator.html">Calculator</a>
     <a href="binary.html">Base Converter</a>
+    <a href="madib.html">Madlibs</a>
 
 </div>
 <form name="baseConverters">
