--- a/madib.html
+++ b/madib.html
@@ -28,7 +28,7 @@
 <form name="madlibs">
     Person Male:<input type="text" name="input1">
     <br><br>
-    Adjective :<input type="text" name="input2">
+    Verb :<input type="text" name="input2">
     <br><br>
     Animal :<input type="text" name="input3">
     <br><br>
