--- a/madib.html
+++ b/madib.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Madlibs</title>
-    <script src="myscript.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <script src="madlib.js"></script>
+    <link rel="stylesheet" href="madlib.css">
 </head>
 <body>
 
