--- a/madib.html
+++ b/madib.html
@@ -46,7 +46,7 @@
     <br><br>
     Number :<input type="text" name="input10">
     <br><br>
-    <div id="button"><button type="button" onclick="document.getElementById('madlibs').innerHTML=madlib()">MADLIB!!(= </button></div>
+    <div id="button"><button type="button" onclick="document.getElementById('story').innerHTML=madlib()">MADLIB!!(= </button></div>
     <p id="story">
         <br><br>
 
