--- a/Family.html
+++ b/Family.html
@@ -8,18 +8,27 @@
 <body>
 <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <a href="Family.html">Family</a>
     <a href="Hobbies.html">Hobbies</a>
     <a href="Sports.html">Sports</a>
-    <a href="MiniProjects.html">Mini Projects</a>
-    <a href="binary.html">Base Converter</a>
-    <a href="madib.html">Madlibs</a>
-
+        <div class="dropdown">
+            <button class="dropbtn">Projects
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="MiniProjects.html">Mini Projects</a>
+                <a href="binary.html">Binary Coverter</a>
+                <a href="calculator.html">Calculator</a>
+                <a href="madib.html">Madlibs</a>
+                <a href="quiz.html">QUIZ!</a>
+            </div>
+        </div>
 </div>
+
+
+
 <h1> Family</h1>
 
 <table style="width: auto" id="Family" border="solid">
