--- a/binary.html
+++ b/binary.html
@@ -12,12 +12,20 @@
     <a href="Family.html">Family</a>
     <a href="Hobbies.html">Hobbies</a>
     <a href="Sports.html">Sports</a>
-    <a href="MiniProjects.html">Mini Projects</a>
-    <a href="calculator.html">Calculator</a>
-    <a href="binary.html">Base Converter</a>
-    <a href="madib.html">Madlibs</a>
-
+        <div class="dropdown">
+            <button class="dropbtn">Projects
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="MiniProjects.html">Mini Projects</a>
+                <a href="binary.html">Binary Coverter</a>
+                <a href="calculator.html">Calculator</a>
+                <a href="madib.html">Madlibs</a>
+                <a href="quiz.html">QUIZ!</a>
+            </div>
+        </div>
 </div>
+
 <form name="baseConverters">
 
     <h4>Binary Base Converters Project</h4>
