--- a/quiz.html
+++ b/quiz.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>QUIZ</title>
+    <link rel="stylesheet" href="quiz.css">
+    <script src="quiz.js"></script>
+</head>
+<body>
+<img src="img/fortnite.jpg" height="300" width="500"/><br>
 Question 1 : what is the name of this game?<br>
     <input type="text" name="a1">
     <br><br>
