--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,25 @@
     <script src="quiz.js"></script>
 </head>
 <body>
+    <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="Family.html">Family</a>
+    <a href="Hobbies.html">Hobbies</a>
+    <a href="Sports.html">Sports</a>
+        <div class="dropdown">
+            <button class="dropbtn">Projects
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="MiniProjects.html">Mini Projects</a>
+                <a href="binary.html">Binary Coverter</a>
+                <a href="calculator.html">Calculator</a>
+                <a href="madib.html">Madlibs</a>
+                <a href="quiz.html">QUIZ!</a>
+            </div>
+        </div>
+</div>
+    <h1> QUIZ <h1>
 <img src="img/fortnite.jpg" height="300" width="500"/><br>
 Question 1 : what is the name of this game?<br>
     <input type="text" name="a1">
