--- a/quiz.html
+++ b/quiz.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>QUIZ</title>
-    <link rel="stylesheet" href="quiz.css">
+    <title>FUN QUIZ!!</title>
     <script src="quiz.js"></script>
+    <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
-    <div class="topnav" id="myTopnav">
+<div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <a href="Family.html">Family</a>
     <a href="Hobbies.html">Hobbies</a>
@@ -25,9 +25,14 @@
             </div>
         </div>
 </div>
-    <h1>QUIZ<h1>
-<img src="img/fortnite.jpg" height="300" width="500"/><br>
-Question 1 : what is the name of this game?<br>
+
+
+<form name="quiz">
+    <h1>RANDOM QUIZ!!</h1>
+
+    <img src="img/fortnite.jpg" height="221" width="400"/><br><br><br>
+
+    Question 1 : what is the name of this game?<br>
     <input type="text" name="a1">
     <br><br>
 
@@ -65,8 +70,6 @@ Question 1 : what is the name of this game?<br>
     <input type="checkbox" name="a6C" value="Leonil Messi">Leonil Messi<br>
     <input type="checkbox" name="a6D" value="Muhammed Raza">Muhammed Raza<br>
     <input type="checkbox" name="a6E" value="Christiano Ronaldo">Christiano Ronaldo<br>
-    <br><br>
-
 
 
 
@@ -74,6 +77,9 @@ Question 1 : what is the name of this game?<br>
     <button type="button" onclick="document.getElementById('answers').innerHTML=checkAnswers()">CHECK ANSWERS</button>
     <br><br><br>
     <p id="answers"></p>
+
+
+
 
 </form>
 </body>
